--- a/Assignment_02.html
+++ b/Assignment_02.html
@@ -48,6 +48,7 @@
 
         header > nav > ul > li > a {
             text-decoration: none;
+            color: black;
         }
 
         body > main {
@@ -61,7 +62,7 @@
             height: 90vh;
             position: absolute;
             top: 0;
-            background-color: darkblue;
+            background-color: #4c0182;
         }
 
         body > main > aside > nav > ul > li {
@@ -97,7 +98,7 @@
         body > main > div > div.giffy-img > div {
             width: 100%;
             height: 100%;
-            background-color: lightpink;
+            background-color: #f7f7f7;
             border: 1px solid black;
             display: inline-block;
             position: relative;
@@ -140,7 +141,7 @@
 
         <header>
             <div class="Header-img">
-                <img src="Assets/img/img-ijse.PNG">
+                <img src="Assets/img/img-ijse.PNG" alt="IJSE-Logo">
             </div>
             <nav>
                 <ul>
