--- a/Assignment_02.html
+++ b/Assignment_02.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Assignment 02</title>
     <link rel="stylesheet" href="Assets/lib/normalize.css">
 
     <style>
